--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": {
     "name": "Jonas Enge",
     "email": "jonas.enge@t-fk.no",
-    "url": "https://github.com/telemark"
+    "url": "https://github.com/maccyber"
   },
   "contributors": [
     {
